<resources>
    <string name="app_name">Pokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_description_pokemon">Pokemon image</string>
    <string name="img_description_pokeball">Pokeball image</string>
    <string name="imgdescr_type_one_icon">Type 1 Icon</string>
    <string name="imgdescr_type_two_icon">Type 2 Icon</string>
    <string name="base_back_button">Base back button</string>
    <string name="tab_about">About</string>
    <string name="tab_evolution">Evolution</string>
    <string name="tab_stats">Stats</string>
</resources>